tried to modify the favicon wouldnt work, corrected the wallpaper to cover the entire screen instead of leaving a blank white space at the bottom

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,7 @@
   background-image:url("/assets/images/3.jpg");
   background-repeat:no-repeat;
   background-attachment: fixed;
+  background-size:cover;
   transition: all 0.35s ease-in-out;
   position:fixed;
   z-index:1;
