--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@ body {
   background-image:url("/assets/images/3.jpg");
   background-repeat:no-repeat;
   background-attachment: fixed;
+  background-size:cover;
 }
 
 .footer {
